--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   nfc_manager: ^3.3.0
   validators: ^3.0.0
   image_picker: ^1.0.4
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
